[tool.poetry]
name = "tensortrade-light"
version = "1.0.1"
description = "tensortrade fork, fixes gym to gymnasium switch compatibility issues"
authors = ["Dmitrii Shibanov <dmitry.shibanov@gmail.com>"]
readme = "README.md"
packages = [{include = "tensortrade-light"}]

[tool.poetry.dependencies]
python = "3.10.1"
pytest = "^7.4.0"
scikit-image = "^0.21.0"
numpy = ">=1.17.0"
pandas = ">=0.25.0"
gym = ">=0.25.2"
pyyaml = ">=5.1.2"
stochastic = ">=0.6.0"
tensorflow = ">=2.7.0"
ipython = ">=7.12.0"
matplotlib = ">=3.1.1"
plotly = ">=4.5.0"
ipywidgets = ">=7.0.0"
deprecated = ">=1.2.13"
ta = "^0.10.2"
pandas-ta = "^0.3.14b0"
gymnasium = "^0.28.1"
ray = "^2.5.1"
tabulate = "^0.9.0"
dm-tree = "^0.1.8"
lz4 = "^4.3.2"
tensorflow-probability = "^0.20.1"
# tensorflow = "^2.12.0"

[tool.poe.tasks]
install-torch = "pip install torch==2.0.1+cpu -f https://download.pytorch.org/whl/torch_stable.html"
# install-scikit-image = "python -m pip install -U scikit-image"
pip-list = "pip list"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
