[tool.poetry]
name = "tensortrade-light"
version = "1.0.1"
description = "tensortrade fork, fixes gym to gymnasium switch compatibility issues"
authors = ["Dmitrii Shibanov <dmitry.shibanov@gmail.com>"]
readme = "README.md"
packages = [{include = "tensortrade"}]

[tool.poetry.dependencies]
python = "3.10.1"
pytest = "^7.4.0"
scikit-image = "^0.21.0"
numpy = ">=1.17.0"
pandas = ">=0.25.0"
gym = ">=0.25.2"
pyyaml = ">=5.1.2"
stochastic = ">=0.6.0"

datamart = { git = "git@github.com:dshibanov/datamart.git", branch = "master" }
finplot = { git = "git@github.com:dshibanov/finplot.git", branch = "master" }
# quantutils = { git = "git@github.com:dshibanov/quantutils.git", branch = "master" }
# newdm2 = { git = "git@github.com:dshibanov/newdm2.git", branch = "master" }
# tensorflow = ">=2.7.0"
# ipython = ">=7.12.0"
# matplotlib = ">=3.1.1"
# plotly = ">=4.5.0"
# ipywidgets = ">=7.0.0"
# deprecated = ">=1.2.13"
# ta = "^0.10.2"
# pandas-ta = "^0.3.14b0"
# gymnasium = "^0.28.1"
# ray = "^2.5.1"
# tabulate = "^0.9.0"
# dm-tree = "^0.1.8"
# lz4 = "^4.3.2"
# tensorflow-probability = "^0.20.1"
# tensorflow = "^2.12.0"
ta = "^0.11.0"
# gymnasium = "^1.0.0"
gymnasium = "0.28.1"
ipython = "^8.31.0"
deprecated = "^1.2.15"
icecream = "^2.1.4"
static-frame = "^2.15.1"
tabulate = "^0.9.0"
# finplot = "^1.9.6"
modin = "^0.32.0"
dictdiffer = "^0.9.0"
ray = {extras = ["tune"], version = "^2.42.1"}
dm-tree = "^0.1.9"
ta-lib = "^0.6.3"
quantstats = "^0.0.64"
lz4 = "^4.4.3"

[tool.poe.tasks]
install-torch = "pip install torch==2.0.1+cpu torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html"
# install-scikit-image = "python -m pip install -U scikit-image"
pip-list = "pip list"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
